--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body{
     font-family: 'Montserrat', sans-serif !important;
 }
 
+#selected{
+    color: #c78c19;
+}
+
 header{
     background-color: #BBBBBB;
     padding: 20px 0;
