--- a/style.css
+++ b/style.css
@@ -2,10 +2,13 @@ body{
     font-family: 'Montserrat', sans-serif !important;
 }
 
-
 header{
     background-color: #BBBBBB;
     padding: 20px 0;
+}
+
+#selecter{
+    color: #088c19;
 }
 
 .caja{
