--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
-<html lang="es">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width" />
-    <title>Produtos - Barbería Alura</title>
+    <title>Contacto - Barbería Alura</title>
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/style.css" />
     <!-- csn icon link-->
@@ -17,12 +17,9 @@
   <body>
     <header>
       <div class="caja">
-        <a href="#"
-          ><img
-            src="../imagenes/logo.png"
-            alt="Logo de la Barbería"
-            class="logo"
-        /></a>
+        <a href="#" >
+          <img src="../imagenes/logo.png" alt="Logo de la Barbería" class="logo" />
+        </a>
         <nav>
           <ul>
             <li><a href="../index.html" id="selected">Home</a></li>
@@ -33,41 +30,116 @@
       </div>
     </header>
 
-    <main>
-      <ul class="productos">
-        <li>
-          <h2>Cabello</h2>
-          <img src="../imagenes/cabello.jpg" />
-          <p class="producto-descripcion">
-            Con tijera o máquina, a gusto del cliente
-          </p>
-          <p class="producto-precio">$ 10.00</p>
-        </li>
-        <li>
-          <h2>Barba</h2>
-          <img src="../imagenes/barba.jpg" />
-          <p class="producto-descripcion">
-            Corte y diseño profesional de barba
-          </p>
-          <p class="producto-precio">$ 08.00</p>
-        </li>
-        <li>
-          <h2>Cabello + Barba</h2>
-          <img src="../imagenes/cabello+barba.jpg" />
-          <p class="producto-descripcion">
-            Paquete completo de cabello y barba
-          </p>
-          <p class="producto-precio">$ 15.00</p>
-        </li>
-      </ul>
-    </main>
+    <main class="main-contacto">
+      <form>
+        <label for="nombreapellido">Nombre y Apellido</label>
+        <input type="text" id="nombreapellido" class="input-padron" required />
 
+        <label for="correoelectronico">Correo Electronico</label>
+        <input
+          type="email"
+          id="correoelectronico"
+          class="input-padron"
+          required
+          placeholder="email@dominio.com"
+        />
+
+        <label for="telefono">Telefono</label>
+        <input
+          type="tel"
+          id="telefono"
+          class="input-padron"
+          required
+          placeholder="(XX) XXXX XXXX"
+        />
+
+        <label for="mensaje">Mensaje</label>
+        <textarea
+          id="mensaje"
+          cols="70"
+          rows="10"
+          class="input-padron"
+          required
+        ></textarea>
+
+        <fieldset>
+          <legend>¿Cómo le gustaría que lo contactemos?</legend>
+
+          <label for="radio-email"
+            ><input
+              type="radio"
+              name="contacto"
+              value="email"
+              id="radio-email"
+            />Email</label
+          >
+
+          <label for="radio-telefono"
+            ><input
+              type="radio"
+              name="contacto"
+              value="telefono"
+              id="radio-telefono"
+            />Teléfono</label
+          >
+
+          <label for="radio-whatsapp"
+            ><input
+              type="radio"
+              name="contacto"
+              value="whatsapp"
+              id="radio-whatsapp"
+              checked
+            />Whatsapp</label
+          >
+        </fieldset>
+
+        <fieldset>
+          <legend>¿En cual horario prefiere ser atendido?</legend>
+          <select>
+            <option>Mañana</option>
+            <option>Tarde</option>
+            <option>Noche</option>
+          </select>
+        </fieldset>
+
+        <label class="checkbox"
+          ><input type="checkbox" checked />¿Le gutaría recibir novedades de la
+          Barbería Alura? 
+          <div></div><input type="checkbox" required/>He leído y acepto la
+          <spam><u>Politica de privacidad</u></spam></div>
+        </label>
+
+        <input type="submit" value="Enviar formulario" class="enviar" />
+      </form>
+
+      <table>
+        <thead>
+          <tr>
+            <th>Día</th>
+            <th>Horario</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Lunes</td>
+            <td>08h ~ 20h</td>
+          </tr>
+          <tr>
+            <td>Miércoles</td>
+            <td>08h ~ 20h</td>
+          </tr>
+          <tr>
+            <td>Viernes</td>
+            <td>08h ~ 20h</td>
+          </tr>
+        </tbody>
+      </table>
+    </main>
     <footer class="footer" id="contact">
       <div class="box-container">
         <div class="content">
-          <a href="#"
-            ><img src="../imagenes/logo.png" alt="Logo" class="logo"
-          /></a>
+          <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" /></a>
           <h1 class="logoName">ByAlex BarberShop</h1>
         </div>
         <div class="box">
