--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -22,9 +22,9 @@
         </a>
         <nav>
           <ul>
-            <li><a href="../index.html" id="selected">Home</a></li>
-            <li><a href="productos.html" id="selected">Productos</a></li>
-            <li><a href="presupuesto.html" id="selected">Contacto</a></li>
+            <li><a href="../index.html" >Home</a></li>
+            <li><a href="productos.html" >Productos</a></li>
+            <li><a id="selected" href="presupuesto.html">Contacto</a></li>
           </ul>
         </nav>
       </div>
