--- a/views/productos.html
+++ b/views/productos.html
@@ -25,9 +25,17 @@
         /></a>
         <nav>
           <ul>
-            <li><a href="../index.html" id="selected">Home</a></li>
-            <li><a href="productos.html" id="selected">Productos</a></li>
-            <li><a href="presupuesto.html" id="selected">Contacto</a></li>
+            <li>
+              <a href="../index.html" >Home</a>
+            </li>
+            <li>
+              <a id="selected" href="productos.html" >Productos</a>
+            </li>
+            <li>
+              <a href="presupuesto.html" "
+                >Contacto</a
+              >
+            </li>
           </ul>
         </nav>
       </div>
