--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -1,97 +1,61 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Contacto - Barbería Alura</title>
-    <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <!-- csn icon link-->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    />
-  </head>
-  <body>
-    <header>
-      <div class="caja">
-        <a href="#" >
-          <img src="../imagenes/logo.png" alt="Logo de la Barbería" class="logo" />
-        </a>
-        <nav>
-          <ul>
-            <li><a href="../index.html" >Home</a></li>
-            <li><a href="productos.html" >Productos</a></li>
-            <li><a id="selected" href="presupuesto.html">Contacto</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
 
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width" />
+  <title>Contacto - Barbería ByAlex</title>
+  <link rel="stylesheet" href="../css/reset.css" />
+  <link rel="stylesheet" href="../css/style.css" />
+  <!-- csn icon link-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+</head>
+
+<body>
+  <header>
+
+    <div class="caja">
+      <a href="#">
+        <img src="../imagenes/logo.png" alt="Logo de la Barbería" class="logo" />
+      </a>
+      <nav>
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="productos.html">Productos</a></li>
+          <li><a id="selected" href="presupuesto.html">Contacto</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <div class="formulario">
     <main class="main-contacto">
+
       <form>
         <label for="nombreapellido">Nombre y Apellido</label>
         <input type="text" id="nombreapellido" class="input-padron" required />
 
         <label for="correoelectronico">Correo Electronico</label>
-        <input
-          type="email"
-          id="correoelectronico"
-          class="input-padron"
-          required
-          placeholder="email@dominio.com"
-        />
+        <input type="email" id="correoelectronico" class="input-padron" required placeholder="email@dominio.com" />
 
         <label for="telefono">Telefono</label>
-        <input
-          type="tel"
-          id="telefono"
-          class="input-padron"
-          required
-          placeholder="(XX) XXXX XXXX"
-        />
+        <input type="tel" id="telefono" class="input-padron" required placeholder="(XX) XXXX XXXX" />
 
         <label for="mensaje">Mensaje</label>
-        <textarea
-          id="mensaje"
-          cols="70"
-          rows="10"
-          class="input-padron"
-          required
-        ></textarea>
+        <textarea id="mensaje" cols="70" rows="10" class="input-padron" required></textarea>
 
         <fieldset>
           <legend>¿Cómo le gustaría que lo contactemos?</legend>
 
-          <label for="radio-email"
-            ><input
-              type="radio"
-              name="contacto"
-              value="email"
-              id="radio-email"
-            />Email</label
-          >
+          <label for="radio-email"><input type="radio" name="contacto" value="email" id="radio-email" />Email</label>
 
-          <label for="radio-telefono"
-            ><input
-              type="radio"
-              name="contacto"
-              value="telefono"
-              id="radio-telefono"
-            />Teléfono</label
-          >
+          <label for="radio-telefono"><input type="radio" name="contacto" value="telefono"
+              id="radio-telefono" />Teléfono</label>
 
-          <label for="radio-whatsapp"
-            ><input
-              type="radio"
-              name="contacto"
-              value="whatsapp"
-              id="radio-whatsapp"
-              checked
-            />Whatsapp</label
-          >
+          <label for="radio-whatsapp"><input type="radio" name="contacto" value="whatsapp" id="radio-whatsapp"
+              checked />Whatsapp</label>
         </fieldset>
 
         <fieldset>
@@ -103,11 +67,11 @@
           </select>
         </fieldset>
 
-        <label class="checkbox"
-          ><input type="checkbox" checked />¿Le gutaría recibir novedades de la
-          Barbería Alura? 
-          <div></div><input type="checkbox" required/>He leído y acepto la
-          <spam><u>Politica de privacidad</u></spam></div>
+        <label class="checkbox"><input type="checkbox" checked />¿Le gutaría recibir novedades de la
+          Barbería Alura?
+          <div></div><input type="checkbox" required />He leído y acepto la
+          <spam><u>Politica de privacidad</u></spam>
+
         </label>
 
         <input type="submit" value="Enviar formulario" class="enviar" />
@@ -136,59 +100,60 @@
         </tbody>
       </table>
     </main>
-    <footer class="footer" id="contact">
-      <div class="box-container">
-        <div class="content">
-          <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" /></a>
-          <h1 class="logoName">ByAlex BarberShop</h1>
-        </div>
-        <div class="box">
-          <h3>Quick link</h3>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
-        </div>
-        <div class="box">
-          <h3>Extra link</h3>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
-        </div>
-        <div class="box">
-          <h3>Extra Link</h3>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Account info</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Order item</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Privacy policy</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Payment method</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Our services</a>
-        </div>
+  </div>
 
-        <div class="box">
-          <h3>Contact Info</h3>
-          <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
-          <a href="#">
-            <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a
-          >
-          <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
-            <i class="fas fa-map"></i>Map</a
-          >
-        </div>
+  <footer class="footer" id="contact">
+    <div class="box-container">
+      <div class="content">
+        <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" /></a>
+        <h1 class="logoName">ByAlex BarberShop</h1>
+      </div>
+      <div class="box">
+        <h3>Quick link</h3>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
+      </div>
+      <div class="box">
+        <h3>Extra link</h3>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
+      </div>
+      <div class="box">
+        <h3>Extra Link</h3>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Account info</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Order item</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Privacy policy</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Payment method</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Our services</a>
       </div>
 
-      <div class="share">
-        <a href="#" class="fab fa-facebook"></a>
-        <a href="#" class="fab fa-twitter"></a>
-        <a href="#" class="fab fa-instagram"></a>
-        <a href="#" class="fab fa-linkedin"></a>
-        <a href="#" class="fab fa-pinterest"></a>
+      <div class="box">
+        <h3>Contact Info</h3>
+        <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
+        <a href="#">
+          <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a>
+        <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
+          <i class="fas fa-map"></i>Map</a>
       </div>
-      <div class="credit">
-        © created by <span>Mr. ByAlex Designer</span> |all rights reserved !
-      </div>
-    </footer>
-  </body>
+    </div>
+
+    <div class="share">
+      <a href="#" class="fab fa-facebook"></a>
+      <a href="#" class="fab fa-twitter"></a>
+      <a href="#" class="fab fa-instagram"></a>
+      <a href="#" class="fab fa-linkedin"></a>
+      <a href="#" class="fab fa-pinterest"></a>
+    </div>
+    <div class="credit">
+      © created by <span>Mr. ByAlex Designer</span> |all rights reserved !
+    </div>
+  </footer>
+</body>
+
 </html>
