--- a/views/productos.html
+++ b/views/productos.html
@@ -1,46 +1,44 @@
 <!DOCTYPE html>
 
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Produtos - Barbería Alura</title>
-    <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <!-- csn icon link-->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    />
-  </head>
-  <body>
-    <header>
-      <div class="caja">
-        <a href="#"
-          ><img
-            src="../imagenes/logo.png"
-            alt="Logo de la Barbería"
-            class="logo"
-        /></a>
-        <nav>
-          <ul>
-            <li>
-              <a href="../index.html" >Home</a>
-            </li>
-            <li>
-              <a id="selected" href="productos.html" >Productos</a>
-            </li>
-            <li>
-              <a href="presupuesto.html" "
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width" />
+  <title>Produtos - Barbería ByAlex</title>
+  <link rel="stylesheet" href="../css/reset.css" />
+  <link rel="stylesheet" href="../css/style.css" />
+  <!-- csn icon link-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+</head>
+
+<div>
+
+  <header>
+    <div class="caja">
+      <a href="#"><img src="../imagenes/logo.png" alt="Logo de la Barbería" class="logo" /></a>
+      <nav>
+        <ul>
+          <li>
+            <a href="../index.html">Home</a>
+          </li>
+          <li>
+            <a id="selected" href="productos.html">Productos</a>
+          </li>
+          <li>
+            <a href="presupuesto.html" "
                 >Contacto</a
               >
             </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+            <li><a href=" contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
+  <body>
     <main>
       <ul class="productos">
         <li>
@@ -69,13 +67,10 @@
         </li>
       </ul>
     </main>
-
     <footer class="footer" id="contact">
       <div class="box-container">
         <div class="content">
-          <a href="#"
-            ><img src="../imagenes/logo.png" alt="Logo" class="logo"
-          /></a>
+          <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" /></a>
           <h1 class="logoName">ByAlex BarberShop</h1>
         </div>
         <div class="box">
@@ -107,11 +102,9 @@
           <h3>Contact Info</h3>
           <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
           <a href="#">
-            <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a
-          >
+            <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a>
           <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
-            <i class="fas fa-map"></i>Map</a
-          >
+            <i class="fas fa-map"></i>Map</a>
         </div>
       </div>
 
@@ -127,4 +120,5 @@
       </div>
     </footer>
   </body>
+
 </html>
