--- a/views/contacto.html
+++ b/views/contacto.html
@@ -14,6 +14,7 @@
     <!-- Link iconos CSS-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
 </head>
+<!--   Iniciamos la barra de navegaciñon -->
 
 <body>
     <header>
@@ -22,13 +23,14 @@
                     <nav> <!-- Agregamos la barra de navegación -->
                         <ul>
                             <li><a href="../index.html">Home</a></li>
-                            <li><a href="views/productos.html">Productos</a></li>
-                            <li><a href="views/presupuesto.html">Contacto</a></li>
+                            <li><a href="productos.html">Productos</a></li>
+                            <li><a href="presupuesto.html">Contacto</a></li>
                             <li><a id="selected" href="views/contacto.html">Contacto</a></li>
                         </ul>
                     </nav>
         </div>
     </header>
+    <!-- Agregamos el mapa de nuestra ubicación-->
     <section class="mapa">
         <h3 class="titulo-principal">Nuestra Ubicación</h3>
         <p>Nuestro establecimiento está ubicado en el corazón de la ciudad</p>
@@ -40,6 +42,7 @@
         </div>
     </section>
 </body>
+<!--Implementamos el pie de página-->
 <footer class="footer" id="contact">
     <div class="box-container">
         <div class="content">
