--- a/views/productos.html
+++ b/views/productos.html
@@ -9,12 +9,12 @@
   <title>Produtos - Barbería ByAlex</title>
   <link rel="stylesheet" href="../css/reset.css" />
   <link rel="stylesheet" href="../css/style.css" />
-  <!-- csn icon link-->
+  <!-- link iconos CSS-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
 </head>
 
 <div>
-
+  <!-- Iniciamos con la barra de navegación-->
   <header>
     <div class="caja">
       <a href="#"><img src="../imagenes/logo.png" alt="Logo de la Barbería" class="logo" /></a>
@@ -37,7 +37,7 @@
       </nav>
     </div>
   </header>
-
+  <!-- Agregamos los productos que ofrecemos-->
   <body>
     <main>
       <ul class="productos">
@@ -67,6 +67,7 @@
         </li>
       </ul>
     </main>
+    <!-- El pie de página -->
     <footer class="footer" id="contact">
       <div class="box-container">
         <div class="content">
