--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
+/*Agregamos la fuente a utilizar*/
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Quicksand:wght@300;400;500;600;700&display=swap');
 
+/*Agregamos un selector para dar color a algunos elementos*/
 :root{
     --black: #F0F0F0;
     --white: #F0F0F0;
 }
 
-  
-
+/*Estilos de la web index.html*/
 body{
     font-family: 'Montserrat', sans-serif !important;
 }
@@ -58,6 +59,7 @@ nav a:hover{
     text-decoration: underline;
 }
 
+/* Nos permite dejar seleccionado la web actual que estamos visualizando en la barra de menú*/
 #selected {color: white ; text-decoration: underline;}
 
 /* CSS para nuestra pagina inicial*/
@@ -98,20 +100,6 @@ nav a:hover{
     margin: 0 20px 20px 0;
 }
 
-.mapa{
-    padding: 3em 0;
-    background: linear-gradient(#BBBBBB, #181616);
-}
-
-.mapa p{
-    margin: 0 0 2em;
-    text-align: center;
-}
-
-.mapa-contenido{
-    width: 940px;
-    margin: 0 auto;
-}
 
 .diferenciales{
     padding: 3em 0;
@@ -133,6 +121,7 @@ nav a:hover{
     line-height: 1.5;
 }
 
+/*Agregamos la imagen que usamos en la lista de diferenciales*/
 .items::before{
     content: "⭐";
 }
@@ -141,6 +130,7 @@ nav a:hover{
     font-weight: bold;
 }
 
+/*Utilizamos la sentencia Flex para dar forma a las imagenes que tenemos en la caja*/
 .caja-diferenciales{
     display: flex;
     flex-flow: row nowrap;
@@ -158,6 +148,8 @@ nav a:hover{
     margin: 0 0 0 50px;
 }
 
+/*Agregamos el hover para dar un mejor aspecto al trasladar el cursor por encima*/
+
 .imagen-diferenciales:hover{
     opacity: 30%;
 }
@@ -170,24 +162,8 @@ nav a:hover{
     width: 560px;
     margin: 1em auto;
 }
-
-@media screen and (max-width:480px) {
-    h1{
-        text-align: center;
-    }
-
-    nav{
-        position: static;
-    }
-    .caja, .principal, .mapa-contenido, .contenido-diferenciales, .video {
-        width: auto;
-    }
-    .lista-diferenciales, .imagen-diferenciales{
-        width: 100%;
-        margin: 0 0 40px;
-    }
-}
-
+/*Iniciamos con la web productos.html*/
+/*Utilizamos la sentencia Flex para dar forma a las cajas de los productos*/
 .productos{
     display: flex;
     flex-direction: row;
@@ -213,6 +189,8 @@ nav a:hover{
     border: 2px solid #000000;
     border-radius: 10px;
 }
+
+/*Utilizamos hover nuevamente para dar un mejor aspecto a la web*/
 
 .productos li:hover{
     border-color:#c78c19;
@@ -241,6 +219,8 @@ nav a:hover{
     margin-top:10px;
 }
 
+/*Comenzamos a dar estilos la web presupuesto.html*/
+/*En primer lugar ulizamos el linear-gradient nuevamente para dar un mejor aspecto al background*/
 .formulario{
     background: linear-gradient(#BBBBBB, #181616);
     margin: 0px auto;
@@ -258,7 +238,7 @@ form{
     margin: 40px 0;
     
 }
-
+/*damos tamaño a los cuadros*/
 form label, form legend{
     display: block;
     font-size: 20px;
@@ -280,7 +260,7 @@ form label, form legend{
     color: blue;
     cursor: pointer;
 }
-
+/*Agregamos color , tamaño y estilos al boton de enviar el formulario*/
 .enviar{
     width: 40%;
     padding: 15px 0;
@@ -299,6 +279,7 @@ form label, form legend{
     transform: scale(1.2);
 }
 
+/*Le damos estilo a la tabla con los horarios*/
 table{
     margin: 40px 40px 0px 40px;
 }
@@ -312,9 +293,10 @@ thead{
 td, th{
     border: 1px solid #000000;
     padding: 8px 15px;
+    color: #FEFEFE
 }
 
-
+/*Ingresamos mediante url la imagen del footer y los estilos*/
 .footer{
     background: url(../imagenes/bg.jpg) no-repeat;
     padding: 20px 0;
@@ -322,13 +304,14 @@ td, th{
     background-position: center center;
 }
 
+/*Utilizamos grid para organizar de la mejor manera los contenedores del .box-container*/
 .footer .box-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));
     gap: 1.5rem;
     padding: 2rem 1rem;
 }
-
+/*utilizamos flex para darle la orientación de columna a los elementos*/
 .footer .box-container .content{
     display: flex;
     flex-direction: column;
@@ -362,12 +345,9 @@ td, th{
     color: var(--black);
 }
 
+/*Agregamos un hover para dar efecto al pasar el mouse por encima de los enlaces*/
 .footer .box-container .box a:hover i{
     padding-right: 2rem;
-}
-
-.footer .box-container .box .fas fa-map{
-    font-weight: bold
 }
 
 .footer .share{
@@ -393,15 +373,30 @@ td, th{
 
 .footer .credit{
     font-size: 14px;
-    margin-top: 1rem;
-    padding-bottom: 2rem;
+    margin-top: 10px;
+    padding-bottom: 20px;
     color: var(--black);
     text-align: center;   
 }
-
 
 .copyright{
     color:#FFFFFF;
     font-size: 13px;
     padding: 10px 0 0;
+}
+
+/*Usamos el elemento linear-gradient para dar un mejor aspecto a la web implementandolo en el background*/
+.mapa{
+    padding: 3em 0;
+    background: linear-gradient(#BBBBBB, #181616);
+}
+
+.mapa p{
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+.mapa-contenido{
+    width: 940px;
+    margin: 0 auto;
 }
