--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+  <!-- Iniciamos la barra de navegacion-->
   <header>
 
     <div class="caja">
@@ -31,6 +32,7 @@
     </div>
   </header>
   <div class="formulario">
+    <!--Iniciamos con el formulario-->
     <main class="main-contacto">
 
       <form>
@@ -73,7 +75,7 @@
           <spam><u>Politica de privacidad</u></spam>
 
         </label>
-
+          <!-- Agregamos el boton de enviar  -->
         <input type="submit" value="Enviar formulario" class="enviar" />
       </form>
 
@@ -101,7 +103,7 @@
       </table>
     </main>
   </div>
-
+  <!-- El pie de pagina -->
   <footer class="footer" id="contact">
     <div class="box-container">
       <div class="content">
