--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -141,10 +141,13 @@
         <a href="#">
           <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a>
         <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
-          <i class="fas fa-map"></i>Map</a>
+          <i class="fa-regular fa-map"></i>Ubicación:
+          <a>Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
+        </a>
       </div>
-    </div>
 
+
+    </div>
     <div class="share">
       <a href="#" class="fab fa-facebook"></a>
       <a href="#" class="fab fa-twitter"></a>
@@ -153,7 +156,7 @@
       <a href="#" class="fab fa-pinterest"></a>
     </div>
     <div class="credit">
-      © created by <span>Mr. ByAlex Designer</span> |all rights reserved !
+      © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
     </div>
   </footer>
 </body>
