--- a/views/contacto.html
+++ b/views/contacto.html
@@ -25,7 +25,7 @@
                             <li><a href="../index.html">Home</a></li>
                             <li><a href="productos.html">Productos</a></li>
                             <li><a href="presupuesto.html">Contacto</a></li>
-                            <li><a id="selected" href="views/contacto.html">Contacto</a></li>
+                            <li><a id="selected" href="contacto.html">Ubicación</a></li>
                         </ul>
                     </nav>
         </div>
