--- a/views/productos.html
+++ b/views/productos.html
@@ -31,7 +31,7 @@
                 >Contacto</a
               >
             </li>
-            <li><a href=" contacto.html">Contacto</a>
+            <li><a href=" contacto.html">Ubicación</a>
           </li>
         </ul>
       </nav>
