--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -26,7 +26,7 @@
           <li><a href="../index.html">Home</a></li>
           <li><a href="productos.html">Productos</a></li>
           <li><a id="selected" href="presupuesto.html">Contacto</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="contacto.html">Ubicación</a></li>
         </ul>
       </nav>
     </div>
