--- a/views/productos.html
+++ b/views/productos.html
@@ -38,6 +38,7 @@
     </div>
   </header>
   <!-- Agregamos los productos que ofrecemos-->
+
   <body>
     <main>
       <ul class="productos">
@@ -66,6 +67,18 @@
           <p class="producto-precio">$ 15.00</p>
         </li>
       </ul>
+
+      <h2 class="titulo-principal">Galería Barbería ByAlex</h2>
+      <section class="container">
+        <div id="img"></div>
+        <div id="img"></div>
+        <div id="img"></div>
+        <div id="img"></div>
+        <div id="img"></div>
+        <div id="img"></div>
+        <div id="img"></div>
+      </section>
+
     </main>
     <!-- El pie de página -->
     <footer class="footer" id="contact">
@@ -109,8 +122,8 @@
             <a>Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
           </a>
         </div>
-  
-  
+
+
       </div>
       <div class="share">
         <a href="#" class="fab fa-facebook"></a>
