--- a/css/style.css
+++ b/css/style.css
@@ -2,51 +2,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Quicksand:wght@300;400;500;600;700&display=swap');
 
 /*Agregamos un selector para dar color a algunos elementos*/
-:root{
+:root {
     --black: #F0F0F0;
     --white: #F0F0F0;
 }
 
 /*Estilos de la web index.html*/
-body{
+body {
     font-family: 'Montserrat', sans-serif !important;
 }
 
-header{
+header {
     background-color: #BBBBBB;
     padding: 20px 0;
 }
 
 
-.caja{
+.caja {
     width: 940px;
     position: relative;
     margin: 0 auto;
     height: 150px;
 }
 
-.caja .selecter a.active{
+.caja .selecter a.active {
     border-color: #088c19;
 }
 
-.logo{
+.logo {
     cursor: pointer;
     height: 150px;
     width: 150px;
 }
 
-nav{
+nav {
     position: absolute;
-    top:110px;
+    top: 110px;
     right: 0;
 }
 
-nav li{
+nav li {
     display: inline;
     margin: 0 0 0 15px;
 }
 
-nav a{
+nav a {
     text-transform: uppercase;
     color: #000000;
     font-weight: bold;
@@ -54,94 +54,99 @@ nav a{
     text-decoration: none;
 }
 
-nav a:hover{
+nav a:hover {
     color: #c78c19;
     text-decoration: underline;
 }
 
 /* Nos permite dejar seleccionado la web actual que estamos visualizando en la barra de menú*/
-#selected {color: white ; text-decoration: underline;}
+#selected {
+    color: white;
+    text-decoration: underline;
+}
 
 /* CSS para nuestra pagina inicial*/
 
-.banner{
+.banner {
     width: 100%;
 }
 
-.principal{
+.principal {
     padding: 3em 0;
     background: #FEFEFE;
     width: 940px;
-    margin: 0 auto; 
+    margin: 0 auto;
 }
 
-.titulo-principal{
+.titulo-principal {
     text-align: center;
     font-size: 2em;
     margin: 0 0 1em;
     clear: left;
-}
-
-.principal p{
-    margin: 0 0 1em;
-}
-
-.principal strong{
     font-weight: bold;
 }
 
-.principal em{
+.principal p {
+    margin: 0 0 1em;
+}
+
+.principal strong {
+    font-weight: bold;
+}
+
+.principal em {
     font-style: italic;
 }
 
-.utensilios{
+.utensilios {
     width: 120px;
-    float: left;   
+    float: left;
     margin: 0 20px 20px 0;
 }
 
 
-.diferenciales{
+.diferenciales {
     padding: 3em 0;
-    background: linear-gradient(#FEFEFE, #181616);;
+    background: linear-gradient(#FEFEFE, #181616);
+    ;
 }
 
-.contenido-diferenciales{
+.contenido-diferenciales {
     width: 640px;
     margin: 0 auto;
 }
 
-.lista-diferenciales{
+.lista-diferenciales {
     width: 40%;
     display: inline-block;
     vertical-align: top;
 }
 
-.items{
+.items {
     line-height: 1.5;
 }
 
 /*Agregamos la imagen que usamos en la lista de diferenciales*/
-.items::before{
+.items::before {
     content: "⭐";
 }
 
-.items:first-child{
+.items:first-child {
     font-weight: bold;
 }
 
 /*Utilizamos la sentencia Flex para dar forma a las imagenes que tenemos en la caja*/
-.caja-diferenciales{
+.caja-diferenciales {
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
     align-content: center;
     margin: 100px;
-    gap: 20px;  
-    
+    gap: 20px;
+
 }
 
-.imagen-diferenciales{
+.imagen-diferenciales {
     width: 50%;
     transition: 400ms;
     box-shadow: 10px 10px 30px 15px #d6981c, -10px -10px 30px 15px #d6981c;
@@ -150,21 +155,22 @@ nav a:hover{
 
 /*Agregamos el hover para dar un mejor aspecto al trasladar el cursor por encima*/
 
-.imagen-diferenciales:hover{
+.imagen-diferenciales:hover {
     opacity: 30%;
 }
 
-.imagen-diferenciales2:hover{
+.imagen-diferenciales2:hover {
     opacity: 30%;
 }
 
-.video{
+.video {
     width: 560px;
     margin: 1em auto;
 }
+
 /*Iniciamos con la web productos.html*/
 /*Utilizamos la sentencia Flex para dar forma a las cajas de los productos*/
-.productos{
+.productos {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -178,7 +184,7 @@ nav a:hover{
 }
 
 
-.productos li{
+.productos li {
     display: inline-block;
     text-align: center;
     width: 30%;
@@ -192,76 +198,139 @@ nav a:hover{
 
 /*Utilizamos hover nuevamente para dar un mejor aspecto a la web*/
 
-.productos li:hover{
-    border-color:#c78c19;
+.productos li:hover {
+    border-color: #c78c19;
 }
 
-.productos li:active{
-    border-color:#088c19;
+.productos li:active {
+    border-color: #088c19;
 }
 
-.productos h2{
+.productos h2 {
     font-size: 25px;
     font-weight: bold;
 }
 
-.productos li:hover h2{
+.productos li:hover h2 {
     font-size: 30px;
 }
 
-.producto-descripcion{
+.producto-descripcion {
     font-size: 18px;
 }
 
-.producto-precio{
+.producto-precio {
     font-size: 20px;
     font-weight: bold;
-    margin-top:10px;
+    margin-top: 10px;
+}
+
+/*Inicia la Galería con GRID!*/
+
+.container {
+    width: 100%;
+    max-width: 1100px;
+    margin: 60px auto;
+    display: grid;
+    grid-template-columns:
+        repeat(4, 1fr);
+    grid-auto-rows: 250px;
+    gap: 4px;
+}
+
+.container div {
+    border-radius: 6px;
+}
+
+.container div:first-child {
+    background-image: url(https://i.pinimg.com/474x/69/1f/13/691f134964c6a093975032cb88cf5289.jpg);
+    grid-row: 1/3;
+}
+
+.container div:nth-child(2) {
+    background-image: url(https://tahecosmetics.com/trends/wp-content/uploads/2020/04/tipos-barba-2020.jpg);
+    grid-column: 2/2;
+}
+
+.container div:nth-child(3) {
+    background-image: url(https://www.shutterstock.com/image-photo/male-hairdresser-making-haircut-young-600nw-1924174253.jpg);
+    grid-column: 3/5;
+}
+
+.container div:nth-child(4) {
+    background-image: url(https://i.pinimg.com/236x/9b/ec/0d/9bec0d0091e0a09d169782684ce687a3.jpg);
+    grid-column: 4/2;
+}
+
+.container div:nth-child(5) {
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6HiQUZ0rxUDvn-XPLqvjPq8NAJugYE-fHq-0FmAe-RmWADIvGRPQblriu_Z247rkKZwg&usqp=CAU);
+    grid-column: 5/4;
+}
+
+.container div:nth-child(6) {
+    background-image: url(https://i.pinimg.com/474x/06/35/87/0635878b315e1d028c5e4a5d0ffa1f07.jpg);
+    grid-column: 2/1;
+}
+
+.container div:last-child {
+    background-image: url(https://i.pinimg.com/originals/3c/b6/0f/3cb60f6b3ec36208e6b40c42743370df.jpg);
+    grid-column: 5/2;
+}
+
+#img {
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 /*Comenzamos a dar estilos la web presupuesto.html*/
 /*En primer lugar ulizamos el linear-gradient nuevamente para dar un mejor aspecto al background*/
-.formulario{
+.formulario {
     background: linear-gradient(#BBBBBB, #181616);
     margin: 0px auto;
     padding: 40px;
 }
 
-.main-contacto{
+.main-contacto {
     width: 940px;
     margin: 0 auto;
 }
 
 
 
-form{
+form {
     margin: 40px 0;
-    
+
 }
+
 /*damos tamaño a los cuadros*/
-form label, form legend{
+form label,
+form legend {
     display: block;
     font-size: 20px;
     margin: 0 0 10px;
 }
 
-.input-padron{
+.input-padron {
     display: block;
-    margin: 0 0 20px ;
+    margin: 0 0 20px;
     padding: 10px 25px;
     width: 50%;
 }
 
-.checkbox{
+.checkbox {
     margin: 20px 0;
 }
 
-.checkbox spam{
+.checkbox spam {
     color: blue;
     cursor: pointer;
 }
+
 /*Agregamos color , tamaño y estilos al boton de enviar el formulario*/
-.enviar{
+.enviar {
     width: 40%;
     padding: 15px 0;
     font-size: 18px;
@@ -274,30 +343,31 @@ form label, form legend{
     cursor: pointer;
 }
 
-.enviar:hover{
+.enviar:hover {
     background: darkorange;
     transform: scale(1.2);
 }
 
 /*Le damos estilo a la tabla con los horarios*/
-table{
+table {
     margin: 40px 40px 0px 40px;
 }
 
-thead{
+thead {
     background-color: #555555;
     color: white;
     font-weight: bold;
 }
 
-td, th{
+td,
+th {
     border: 1px solid #000000;
     padding: 8px 15px;
     color: #FEFEFE
 }
 
 /*Ingresamos mediante url la imagen del footer y los estilos*/
-.footer{
+.footer {
     background: url(../imagenes/bg.jpg) no-repeat;
     padding: 20px 0;
     background-size: cover;
@@ -305,34 +375,36 @@ td, th{
 }
 
 /*Utilizamos grid para organizar de la mejor manera los contenedores del .box-container*/
-.footer .box-container{
+.footer .box-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));
+    /*repite el cuadro de 10px como mínimo y máximo 1 fracción*/
     gap: 1.5rem;
     padding: 2rem 1rem;
 }
+
 /*utilizamos flex para darle la orientación de columna a los elementos*/
-.footer .box-container .content{
+.footer .box-container .content {
     display: flex;
     flex-direction: column;
     margin-bottom: 2rem;
 }
 
-.footer .box-container .content h1{ 
+.footer .box-container .content h1 {
     display: flex;
     align-items: center;
     font-size: 20px;
     color: var(--black);
 }
 
-.footer .box-container .box h3{
+.footer .box-container .box h3 {
     font-weight: bold;
     font-size: 22px;
     color: var(--black);
     padding: 1rem 0;
 }
 
-.footer .box-container .box a{
+.footer .box-container .box a {
     display: block;
     font-size: 16px;
     color: var(--black);
@@ -340,22 +412,22 @@ td, th{
     text-decoration: none;
 }
 
-.footer .box-container .box a i{
+.footer .box-container .box a i {
     padding-right: .5rem;
     color: var(--black);
 }
 
 /*Agregamos un hover para dar efecto al pasar el mouse por encima de los enlaces*/
-.footer .box-container .box a:hover i{
+.footer .box-container .box a:hover i {
     padding-right: 2rem;
 }
 
-.footer .share{
+.footer .share {
     padding: 1rem 0;
     text-align: center;
 }
 
-.footer .share a{
+.footer .share a {
     height: 2rem;
     width: 2rem;
     line-height: 2rem;
@@ -366,37 +438,37 @@ td, th{
     border-radius: 50%;
 }
 
-.footer .share a:hover{
+.footer .share a:hover {
     background: black;
     color: var(--black);
 }
 
-.footer .credit{
+.footer .credit {
     font-size: 14px;
     margin-top: 10px;
     padding-bottom: 20px;
     color: var(--black);
-    text-align: center;   
+    text-align: center;
 }
 
-.copyright{
-    color:#FFFFFF;
+.copyright {
+    color: #FFFFFF;
     font-size: 13px;
     padding: 10px 0 0;
 }
 
 /*Usamos el elemento linear-gradient para dar un mejor aspecto a la web implementandolo en el background*/
-.mapa{
+.mapa {
     padding: 3em 0;
     background: linear-gradient(#BBBBBB, #181616);
 }
 
-.mapa p{
+.mapa p {
     margin: 0 0 2em;
     text-align: center;
 }
 
-.mapa-contenido{
+.mapa-contenido {
     width: 940px;
     margin: 0 auto;
 }
