--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -70,7 +70,7 @@
         </fieldset>
 
         <label class="checkbox"><input type="checkbox" checked />¿Le gutaría recibir novedades de la
-          Barbería Alura?
+          Barbería ByAlex?
           <div></div><input type="checkbox" required />He leído y acepto la
           <spam><u>Politica de privacidad</u></spam>
 
