--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -142,8 +142,7 @@
           <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a>
         <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
           <i class="fa-regular fa-map"></i>Ubicación:
-          <a>Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
-        </a>
+          Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
       </div>
 
 
