--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -31,7 +31,7 @@
       </nav>
     </div>
   </header>
-  < class="formulario">
+  <class="formulario">
     <!--Iniciamos con el formulario-->
     <main class="main-contacto">
 
@@ -69,15 +69,17 @@
           </select>
         </fieldset>
 
+
         <div class="checkbox"><input type="checkbox" checked>
           ¿Le gutaría recibir novedades de la
           Barbería ByAlex?
           <div><input type="checkbox" required>
             He leído y acepto la
             <spam><u>Politica de privacidad
-          </div></u></spam>
+              </u></spam>
+          </div>
           <!-- Agregamos el boton de enviar  -->
-          <input type="submit" value="Enviar formulario" class="enviar" />
+          <input type="submit" value="Enviar formulario" class="enviar">
       </form>
 
       <table>
