--- a/views/contacto.html
+++ b/views/contacto.html
@@ -19,7 +19,8 @@
 <body>
     <header>
         <div class="caja">
-            <a href="#"><img src="../imagenes/logo.png" alt="Logo de la Barbería" class="logo" /><a>
+            <a href="#"><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería"
+                    class="logo" /><a>
                     <nav> <!-- Agregamos la barra de navegación -->
                         <ul>
                             <li><a href="../index.html">Home</a></li>
@@ -46,7 +47,7 @@
 <footer class="footer" id="contact">
     <div class="box-container">
         <div class="content">
-            <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" /></a>
+            <a href="#"><img src="../imagenes/logo.png" width="250" height="250" alt="Logo" class="logo" /></a>
             <h1 class="logoName">ByAlex BarberShop</h1>
         </div>
         <div class="box">
