--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -18,7 +18,7 @@
   <header>
     <div class="caja">
       <a href="#">
-        <img src="../imagenes/logo.png" alt="Logo de la Barbería" class="logo">
+        <img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo">
       </a>
       <nav>
         <ul>
@@ -35,15 +35,18 @@
     <!--Iniciamos con el formulario-->
     <main class="main-contacto">
 
-      <>
+      <form>
         <label for="nombreapellido">Nombre y Apellido</label>
-        <input type="text" id="nombreapellido" class="input-padron" required>
+        <input type="text" id="nombreapellido" class="input-padron" title="Máximo de 30 cracteres"
+          placeholder="Nombre y Apellido" pattern="[A-Za-z]{0,30}[\.]{*}" required>
 
         <label for="correoelectronico">Correo Electronico</label>
-        <input type="email" id="correoelectronico" class="input-padron" required placeholder="email@dominio.com">
+        <input type="email" id="correoelectronico" class="input-padron" title="Cumpla con un formato valido"
+          placeholder="email@dominio.com" pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" required>
 
         <label for="telefono">Telefono</label>
-        <input type="tel" id="telefono" class="input-padron" required placeholder="(XX) XXXX XXXX">
+        <input type="tel" id="telefono" class="input-padron" placeholder="XXX XX XX XX"
+          title="Introduce número de 10 dígitos" pattern="[\d]{9}" required>
 
         <label for="mensaje">Mensaje</label>
         <textarea id="mensaje" cols="70" rows="10" class="input-padron" required></textarea>
@@ -58,6 +61,7 @@
 
           <label for="radio-whatsapp"><input type="radio" name="contacto" value="whatsapp" id="radio-whatsapp"
               checked>Whatsapp</label>
+
         </fieldset>
 
         <fieldset>
@@ -108,7 +112,7 @@
   <footer class="footer" id="contact">
     <div class="box-container">
       <div class="content">
-        <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" /></a>
+        <a href="#"><img src="../imagenes/logo.png" width="250" height="250" alt="Logo" class="logo"></a>
         <h1 class="logoName">ByAlex BarberShop</h1>
       </div>
       <div class="box">
