--- a/views/productos.html
+++ b/views/productos.html
@@ -15,7 +15,7 @@
 <!-- Iniciamos con la barra de navegación-->
 <header>
   <div class="caja">
-    <a href="#"><img src="../imagenes/logo.png" alt="Logo de la Barbería" class="logo"></a>
+    <a href="#"><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo"></a>
     <nav>
       <ul>
         <li>
@@ -38,7 +38,7 @@
   <ul class="productos">
     <li>
       <h2>Cabello</h2>
-      <img src="../imagenes/cabello.jpg" alt="FotoCabello">
+      <img src="../imagenes/cabello.jpg" width="250" height="250" alt="FotoCabello">
       <p class="producto-descripcion">
         Con tijera o máquina, a gusto del cliente
       </p>
@@ -46,7 +46,7 @@
     </li>
     <li>
       <h2>Barba</h2>
-      <img src="../imagenes/barba.jpg" alt="FotoBarba">
+      <img src="../imagenes/barba.jpg" width="250" height="250" alt="FotoBarba">
       <p class="producto-descripcion">
         Corte y diseño profesional de barba
       </p>
@@ -54,7 +54,7 @@
     </li>
     <li>
       <h2>Cabello + Barba</h2>
-      <img src="../imagenes/cabello+barba.jpg" alt="FotCabello+Barba">
+      <img src="../imagenes/cabello+barba.jpg" width="250" height="250" alt="FotCabello+Barba">
       <p class="producto-descripcion">
         Paquete completo de cabello y barba
       </p>
@@ -78,7 +78,7 @@
 <footer class="footer" id="contact">
   <div class="box-container">
     <div class="content">
-      <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo"></a>
+      <a href="#"><img src="../imagenes/logo.png" width="250" height="250" alt="Logo" class="logo"></a>
       <h1 class="logoName">ByAlex BarberShop</h1>
     </div>
     <div class="box">
