--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -113,7 +113,7 @@
 
     <div class="box-container">
       <div class="content">
-        <a href="#"><img src="./imagenes/logo.png" alt="Logo" class="logo" width="220" height="280"
+        <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" width="220" height="280"
             alt="imagen-logo"></a>
         <h1 class="logoName">ByAlex BarberShop</h1>
       </div>
