--- a/views/productos.html
+++ b/views/productos.html
@@ -63,14 +63,14 @@
   </ul>
 
   <h2 class="titulo-principal">Galería Barbería ByAlex</h2>
-  <div class="container" id="img">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+  <div class="container">
+    <div id="img"></div>
+    <div id="img"></div>
+    <div id="img"></div>
+    <div id="img"></div>
+    <div id="img"></div>
+    <div id="img"></div>
+    <div id="img"></div>
   </div>
 
 </main>
