--- a/css/style.css
+++ b/css/style.css
@@ -268,8 +268,6 @@ nav a:hover {
 /*Inicia la Galería con GRID!*/
 
 .container {
-    width: auto;
-    margin: 60px auto;
     display: grid;
     grid-template-columns:
         repeat(4, 1fr);
@@ -318,9 +316,12 @@ nav a:hover {
 }
 
 #img {
+    width: 100%;
+    height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    object-fit: cover;
 }
 
 /*Comenzamos a dar estilos la web presupuesto.html*/
@@ -661,5 +662,18 @@ th {
         box-sizing: border-box;
         border: 2px solid #000000;
         border-radius: 10px;
+    }
+
+
+
+    .container {
+        width: 75wh;
+        margin: 60px auto;
+        display: grid;
+        grid-template-columns:
+            repeat(4, 1fr);
+        grid-auto-rows: 140px;
+        gap: 2px;
+        padding: 0px 50px;
     }
 }
