--- a/views/productos.html
+++ b/views/productos.html
@@ -35,6 +35,7 @@
 </header>
 <!-- Agregamos los productos que ofrecemos-->
 <main>
+  <h2 class="titulo-principal">Productos</h2>
   <ul class="productos">
     <li>
       <h2>Cabello</h2>
