--- a/views/contacto.html
+++ b/views/contacto.html
@@ -3,45 +3,47 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Barbería ByAlex</title>
-    <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <!-- Fuente de texto -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet" />
-    <!-- Link iconos CSS-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width">
+    <title>Produtos - Barbería ByAlex</title>
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <!-- link iconos CSS-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
-<!--   Iniciamos la barra de navegaciñon -->
-
-<body>
-    <header>
-        <div class="caja">
-            <a href="#"><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería"
-                    class="logo" /><a>
-                    <nav> <!-- Agregamos la barra de navegación -->
-                        <ul>
-                            <li><a href="../index.html">Home</a></li>
-                            <li><a href="productos.html">Productos</a></li>
-                            <li><a href="presupuesto.html">Contacto</a></li>
-                            <li><a id="selected" href="contacto.html">Ubicación</a></li>
-                        </ul>
-                    </nav>
-        </div>
-    </header>
-    <!-- Agregamos el mapa de nuestra ubicación-->
-    <section class="mapa">
-        <h3 class="titulo-principal">Nuestra Ubicación</h3>
-        <p>Nuestro establecimiento está ubicado en el corazón de la ciudad</p>
-        <div class="mapa-contenido">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.5379712842723!2d-3.700011624131069!3d40.44122857143564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4228f0d66f20dd%3A0xd2f315a5e7718fbe!2sAcademia%20Oposiciones%20y%20Cursos%20%7C%20MasterD%20Madrid!5e0!3m2!1ses!2ses!4v1705861032280!5m2!1ses!2ses"
-                width="100%" height="300" style="border: 0" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-    </section>
+<!-- Iniciamos con la barra de navegación-->
+<header>
+    <div class="caja">
+        <a href="#"><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo"></a>
+        <nav>
+            <ul>
+                <li>
+                    <a href=" ../index.html">Home</a>
+                </li>
+                <li>
+                    <a href="productos.html">Productos</a>
+                </li>
+                <li>
+                    <a href="presupuesto.html">Contacto</a>
+                </li>
+                <li><a id="selected" href="contacto.html">Ubicación</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</header>
+<!-- Agregamos el mapa de nuestra ubicación-->
+<section class="mapa">
+    <h3 class="titulo-principal">Nuestra Ubicación</h3>
+    <p>Nuestro establecimiento está ubicado en el corazón de la ciudad</p>
+    <div class="frame">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.5379712842723!2d-3.700011624131069!3d40.44122857143564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4228f0d66f20dd%3A0xd2f315a5e7718fbe!2sAcademia%20Oposiciones%20y%20Cursos%20%7C%20MasterD%20Madrid!5e0!3m2!1ses!2ses!4v1705861032280!5m2!1ses!2ses"
+            width="100%" height="300" style="border: 0" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+</section>
 </body>
 <!--Implementamos el pie de página-->
 <footer class="footer" id="contact">
