--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -137,7 +137,7 @@
         <h3>Contact Info</h3>
         <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
         <a href="#">
-          <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a>
+          <i class="fas fa-envelope"></i>ByAlex@gmail.com</a>
         <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
           <i class="fa-regular fa-map"></i>Ubicación:
           Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
