--- a/css/style.css
+++ b/css/style.css
@@ -347,6 +347,27 @@ nav a:hover {
     size: 80%;
 }
 
+small {
+    background-color: #e74d3c;
+    border-radius: .5rem;
+    padding: .5rem;
+    color: #FFF;
+    bottom: 0px;
+    left: 0px;
+    visibility: hidden;
+}
+
+.form-control.success input {
+    border-color: #2ecc71;
+}
+
+.form-control.error input {
+    border-color: #e74d3c;
+}
+
+.form-control.error small {
+    visibility: visible;
+}
 
 form {
     display: flex;
@@ -354,7 +375,7 @@ form {
     flex-direction: column;
 }
 
-.formularioF {
+#formularioF {
     padding: 20px;
     border: solid 2px black;
     margin: 30px;
